--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -44,6 +44,13 @@
         android:text="@string/sendConcatPitData"
         android:onClick="sendConcatPitData"/>
 
+    <!--<Button
+        android:id="@+id/bluetooth_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/bluetooth"
+        android:onClick="goToBluetoothScreen"/>-->
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
