--- a/app/src/main/res/layout/activity_attribute_analysis.xml
+++ b/app/src/main/res/layout/activity_attribute_analysis.xml
@@ -52,6 +52,6 @@
         android:id="@+id/analysisProgressBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/question_height"
-        android:layout_marginTop="@dimen/top_margin" />
+        android:layout_marginTop="@dimen/between_margin" />
 
 </LinearLayout>
