--- a/app/src/main/res/layout/activity_team_analysis.xml
+++ b/app/src/main/res/layout/activity_team_analysis.xml
@@ -283,6 +283,6 @@
         android:id="@+id/analysisProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top_margin" />
+        android:layout_marginTop="@dimen/between_margin" />
 
 </LinearLayout>
