--- a/app/src/main/res/drawable/toggle_drawable.xml
+++ b/app/src/main/res/drawable/toggle_drawable.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-        <shape>
-            <solid
-                android:color="@color/colorToggleOn" />
-            <stroke
-                android:width="1dp"
-                android:color="#171717" />
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/colorToggleOn" />
             <padding
                 android:left="5dp"
-                android:top="5dp"
+                android:top="8dp"
                 android:right="5dp"
-                android:bottom="5dp" />
+                android:bottom="8dp" />
         </shape>
     </item>
-        <item android:state_checked="false">
-        <shape>
-            <solid
-                android:color="@color/colorToggleOff" />
-            <stroke
-                android:width="1dp"
-                android:color="#171717" />
+    <item android:state_selected="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/colorToggleOn" />
             <padding
                 android:left="5dp"
-                android:top="5dp"
+                android:top="8dp"
                 android:right="5dp"
-                android:bottom="5dp" />
+                android:bottom="8dp" />
+        </shape>
+    </item>
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/colorToggleOff" />
+            <padding
+                android:left="5dp"
+                android:top="8dp"
+                android:right="5dp"
+                android:bottom="8dp" />
         </shape>
     </item>
 </selector>
