--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="scoutingRadioButtonTheme">
+    <style name="buttonTheme">
+        <item name="android:layout_marginRight">@dimen/radiobutton_margin</item>
+        <item name="android:layout_marginLeft">@dimen/radiobutton_margin</item>
         <item name="android:textAlignment">center</item>
         <item name="android:autoSizeMinTextSize">@dimen/min_text_size</item>
         <item name="android:autoSizeMaxTextSize">@dimen/max_text_size</item>
