--- a/app/src/main/res/drawable/toggle_drawable.xml
+++ b/app/src/main/res/drawable/toggle_drawable.xml
@@ -22,6 +22,17 @@
                 android:bottom="8dp" />
         </shape>
     </item>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/colorToggleOn" />
+            <padding
+                android:left="5dp"
+                android:top="8dp"
+                android:right="5dp"
+                android:bottom="8dp" />
+        </shape>
+    </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
