--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -12,7 +12,6 @@
 
     <Button
         android:id="@+id/button15"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -27,7 +26,6 @@
 
     <Button
         android:id="@+id/button16"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -43,7 +41,6 @@
 
     <Button
         android:id="@+id/button17"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -59,7 +56,6 @@
 
     <Button
         android:id="@+id/send_pit_data"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -75,7 +71,6 @@
 
     <Button
         android:id="@+id/button18"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -91,7 +86,6 @@
 
     <Button
         android:id="@+id/send_concat_pit_data"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -114,7 +108,6 @@
 
     <Button
         android:id="@+id/button19"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -130,7 +123,6 @@
 
     <Button
         android:id="@+id/button20"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -150,7 +142,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="98dp"
         android:layout_marginBottom="94dp"
+        android:maxLines="1"
         android:hint="@string/eventKeyHint"
+        android:imeOptions="actionDone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +152,6 @@
 
     <Button
         android:id="@+id/button21"
-        style="@style/buttonTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
