--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,35 +3,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-        <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
-    </group>
-
-    <item android:title="Communicate">
+    <item android:title="@string/forms">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
+                android:id="@+id/pit"
+                android:title="@string/pit"
+                android:icon="@drawable/ic_baseline_assignment_24px" />
+        </menu>
+    </item>
+
+    <item android:title="@string/bluetooth">
+        <menu>
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/send_match_data"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:title="@string/send_match_data" />
+            <item
+                android:id="@+id/send_pit_data"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/send_pit_data" />
+            <item
+                android:id="@+id/send_concat_match_data"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/send_concat_match_data" />
+            <item
+                android:id="@+id/send_concat_pit_data"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/send_concat_pit_data" />
+            <item
+                android:id="@+id/send_pit_photos"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/send_pit_photos" />
+        </menu>
+    </item>
+
+    <item android:title="@string/analysis">
+        <menu>
+            <item
+                android:id="@+id/team_analysis"
+                android:title="@string/team_analysis"
+                android:icon="@drawable/ic_baseline_assessment_24px" />
+            <item
+                android:id="@+id/attribute_analysis"
+                android:title="@string/attribute_analysis"
+                android:icon="@drawable/ic_baseline_assessment_24px" />
+        </menu>
+    </item>
+
+    <item android:title="@string/advanced">
+        <menu>
+            <item
+                android:id="@+id/settings"
+                android:title="@string/settings"
+                android:icon="@drawable/ic_baseline_settings_20px" />
         </menu>
     </item>
 
