--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimary">#6b0002</color>
     <color name="colorPrimaryDark">#490001</color>
     <color name="colorAccent">#4a44ff</color>
-    <color name="colorToggleOff">#6B6B6B</color>
-    <color name="colorToggleOn">#222222</color>
+    <color name="colorToggleOff">#C5C5C5</color>
+    <color name="colorToggleOn">#818181</color>
     <color name="black">#494949</color>
     <color name="hintColor">#999999</color>
     <color name="textColor">#FFFFFF</color>
