refactored FileService, added end shift button, added send button with no functionality

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/main_activity"
-        android:title="Return Home" />
+        android:title="@string/return_home" />
     <item android:id="@+id/send_data"
-        android:title="Send Data"/>
+        android:title="@string/send_data"/>
     <item android:id="@+id/admin_activity"
         android:title="@string/goToAdmin"/>
+    <item android:id="@+id/end_shift"
+        android:title="@string/end_shift"/>
 </menu>
