--- a/app/src/main/res/layout/layout_analysis_element.xml
+++ b/app/src/main/res/layout/layout_analysis_element.xml
@@ -10,15 +10,25 @@
         android:id="@+id/elementTeamNumTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autoSizeMinTextSize="@dimen/min_text_size"
-        android:autoSizeMaxTextSize="@dimen/max_text_size"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
+        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:layout_weight="1"/>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="?android:attr/listDivider" />
 
     <TextView
         android:id="@+id/elementAttributeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autoSizeMinTextSize="@dimen/min_text_size"
-        android:autoSizeMaxTextSize="@dimen/max_text_size"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
+        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:layout_weight="1"/>
 </LinearLayout>
