--- a/app/src/main/res/layout/layout_file_item.xml
+++ b/app/src/main/res/layout/layout_file_item.xml
@@ -35,27 +35,36 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/file_type_title_view" />
+        app:layout_constraintTop_toBottomOf="@id/file_type_title_view"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/file_type_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/match"
+        app:layout_constraintEnd_toStartOf="@+id/date_created_title_view"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/file_type_title_view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/creator_initials_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="dr"
+        app:layout_constraintEnd_toStartOf="@+id/date_created_view"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/creator_initials_title_view"
         app:layout_constraintTop_toBottomOf="@+id/file_type_view" />
 
